<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="50dp"
        android:paddingLeft="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/menu"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/profile"/>
    </LinearLayout>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="wrap_content"
        android:id="@+id/refreshLayoutProfile"
        android:layout_height="wrap_content">
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/layoutProfile"
       android:visibility="invisible"
       android:orientation="vertical">
       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="horizontal"
           android:paddingTop="20dp"
           android:background="@drawable/stroke_bottom"
           android:paddingBottom="20dp"
           android:layout_marginTop="10dp"
           android:layout_height="wrap_content">

           <androidx.cardview.widget.CardView
               android:layout_width="wrap_content"
               app:cardCornerRadius="200dp"
               android:layout_marginLeft="10dp"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="70dp"
                   android:id="@+id/imgAvatar"
                   android:layout_height="70dp"/>
           </androidx.cardview.widget.CardView>
           <LinearLayout
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_marginLeft="20dp"
               android:gravity="center_vertical"
               android:layout_height="match_parent">
               <TextView
                   android:layout_width="wrap_content"
                   android:text="@string/userName"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtUserName"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_marginTop="5dp"
                   android:text="@string/location"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtLocation"/>
           </LinearLayout>
       </LinearLayout>
       <LinearLayout
           android:layout_width="match_parent"
           android:orientation="vertical"
           android:paddingLeft="10dp"
           android:paddingTop="20dp"
           android:paddingBottom="20dp"
           android:background="@drawable/stroke_bottom"
           android:gravity="center_vertical"
           android:layout_height="wrap_content">
           <TextView
               android:layout_width="wrap_content"
               android:text="@string/about"
               android:layout_height="wrap_content"
               android:id="@+id/txtAbout"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_marginTop="5dp"
               android:text="@string/bio"
               android:layout_height="wrap_content"
               android:id="@+id/txtBio"/>
       </LinearLayout>
       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:paddingBottom="20dp"
           android:paddingLeft="10dp"
           android:paddingRight="10dp"
           android:background="@drawable/stroke_bottom">
           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/stats"
               android:paddingTop="20dp"
               android:id="@+id/txtStats"
               android:paddingBottom="10dp" />
           <LinearLayout
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_below="@id/txtStats"
               android:id="@+id/layoutPublicRepo"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="wrap_content"
                   android:text="@string/number"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtNumberPublicRepo"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_marginTop="5dp"
                   android:text="@string/publicRepo"
                   android:layout_height="wrap_content" />
           </LinearLayout>

           <LinearLayout
               android:id="@+id/layoutFollowers"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_centerInParent="true"
               android:layout_below="@id/txtStats"
               android:orientation="vertical">

               <TextView
                   android:id="@+id/txtNumberFollowers"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/number" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   android:text="@string/followers" />
           </LinearLayout>
           <LinearLayout
               android:layout_width="wrap_content"
               android:orientation="vertical"
               android:layout_below="@id/txtStats"
               android:id="@+id/layoutFollowing"
               android:layout_alignParentRight="true"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="wrap_content"
                   android:text="@string/number"
                   android:layout_height="wrap_content"
                   android:id="@+id/txtNumberFollowing"/>
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_marginTop="5dp"
                   android:text="@string/following"
                   android:layout_height="wrap_content"/>
           </LinearLayout>
       </RelativeLayout>
   </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>